# blueprint

./: .gitignore  .pre-commit-config.yaml  .python-version  Makefile  README.md  noxfile.py  pyproject.toml
.devcontainer/: devcontainer.json
features/: makecake.feature
features/steps/: makecake_test.py
src/application/: __init__.py
src/application/gateways/: __init__.py
src/application/web/: __init__.py
src/blueprint/: __init__.py  example_test.py
src/cakemold/application/: application_test.py
src/cakemold/infrastructure/: application_test.py
src/cakemold/ui/: __init__.py
src/infrastructure/: __init__.py
src/ui/cli/: __init__.py
tests/: acceptance_test.py
