[tool.bandit]
exclude_dirs = ["tests", "features"]

[tool.black]
max-line-length = 120
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
ignore_missing_imports = true
# https://stackoverflow.com/questions/62265366/does-mypy-only-type-check-a-function-if-it-declares-a-return-type
check_untyped_defs = true

[tool.poetry]
name = "blueprint"
version = "0.0.1"
description = "A template to build python projects"
authors = ["Luís Miranda <luistm@gmail.com>"]
license = "The Unlicense"
readme = "README.md"
packages = [{ include = "blueprint", from = "src" }]
exclude = ["**/*_test.py"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
bandit = { extras = ["toml"], version = "^1.7.9" }
black = "^24.8.0"
coverage = "^7.6.1"
flake8 = "^7.1.1"
ipython = [
    {version = "^8.18.1", python = ">=3.9,<3.10"},
    {version = "^8.23.0", python = ">=3.10"},
]
isort = "^5.13.2"
mypy = "^1.11.2"
nox = "^2024.4.15"
pre-commit = "^3.8.0"
pytest = "^8.3.3"
pytest-xdist = "^3.6.1"

[tool.pytest.ini_options]
markers = ["integration: tags a test as integration tests"]
