[tool.bandit]
exclude_dirs = ["tests", "features"]

[tool.black]
max-line-length = 120
target-version = ['py311', 'py312','py313']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
ignore_missing_imports = true
# https://stackoverflow.com/questions/62265366/does-mypy-only-type-check-a-function-if-it-declares-a-return-type
check_untyped_defs = true

[tool.poetry]
name = "blueprint"
version = "0.0.1"
description = "A template to build python projects"
authors = ["Luís Miranda <luistm@gmail.com>"]
license = "The Unlicense"
readme = "README.md"
packages = [{ include = "blueprint", from = "src" }]
exclude = ["**/*_test.py"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
bandit = { extras = ["toml"], version = "^1.8.3" }
black = "^25.1.0"
coverage = "^7.6.12"
flake8 = "^7.1.2"
ipython = [
    {version = "^8.18.1", python = ">=3.9,<3.10"},
    {version = "^8.23.0", python = ">=3.10"},
]
isort = "^6.0.1"
mypy = "^1.15.0"
nox = "^2025.2.9"
pre-commit = "^4.1.0"
pytest = "^8.3.5"
pytest-xdist = "^3.6.1"

[tool.pytest.ini_options]
markers = ["integration: tags a test as integration tests"]
