[tool.bandit]
exclude_dirs = ["tests", "features"]

[tool.black]
max-line-length = 120
target-version = ['py311', 'py312','py313']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
ignore_missing_imports = true
# https://stackoverflow.com/questions/62265366/does-mypy-only-type-check-a-function-if-it-declares-a-return-type
check_untyped_defs = true

[tool.poetry]
name = "blueprint"
version = "0.0.1"
description = "A template to build python projects"
authors = ["Luís Miranda <luistm@gmail.com>"]
license = "The Unlicense"
readme = "README.md"
packages = [{ include = "blueprint", from = "src" }]
exclude = ["**/*_test.py"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
bandit = { extras = ["toml"], version = "^1.8.6" }
black = "^25.9.0"
coverage = "^7.11.0"
flake8 = "^7.3.0"
ipython = "^9.6.0"
isort = "^7.0.0"
mypy = "^1.18.2"
nox = "^2025.10.16"
pre-commit = "^4.3.0"
pytest = "^8.4.2"
pytest-xdist = "^3.8.0"

[tool.pytest.ini_options]
markers = ["integration: tags a test as integration tests"]
